--- a/python_3/Основы/2.Числа и операции.md
+++ b/python_3/Основы/2.Числа и операции.md
@@ -1,12 +1,12 @@
 # Операции с целыми числами
 Оператор |  Описание | Пример | Результат
 ------------ | ------------  | ------------ | ------------
-+ | Сложение  | 5 + 8 | 13
-- | Вычитание  | 90 – 10 | 80
+\+ | Сложение  | 5 + 8 | 13
+\- | Вычитание  | 90 – 10 | 80
 \* | Умножение  | 4 \* 7 | 28
-/ | Деление с плавающей точкой  | 7 / 1.3, 8 / 3 | 5.38, 2.66
-// | Целочисленное деление  | 7 // 1.3, 8 // 3 | 5.0, 2
-% | Вычисление остатка  | 7 % 3 | 1
+\/ | Деление с плавающей точкой  | 7 / 1.3, 8 / 3 | 5.38, 2.66
+\/\/ | Целочисленное деление  | 7 // 1.3, 8 // 3 | 5.0, 2
+\% | Вычисление остатка  | 7 % 3 | 1
 \*\* | Возведение в степень  | 3 \*\* 4 | 81
 divmod() | Получить частное и остаток  | divmod(9,5) | (1, 4)
 ## Преобразования типов
