Sunday Morning Commit
Добавил везде немного, а также начал писать про строки (там много :0)

--- a/python_3/Оглавление.md
+++ b/python_3/Оглавление.md
@@ -12,7 +12,28 @@
 		-  [[1.Типы и переменные#Переменные#Копирование]]
 - [[2.Числа и операции]]
 	- [[2.Числа и операции#Операции с целыми числами]]
+		- [[2.Числа и операции#Таблица типов]]
 		- [[2.Числа и операции#Операции с целыми числами#Преобразования типов]]
 	- [[2.Числа и операции#Числа с плавающей точкой]]
+	- [[2.Числа и операции#Комментарии]]
+	- [[2.Числа и операции#Продлеваем строки с помощью символа \]]
+	- [[2.Числа и операции#Числа с плавающей точкой]]
 	- [[2.Числа и операции#Системы счисления]]
+- [[3.Выбираем с помощью операторов]]
+	- [[3.Выбираем с помощью операторов#If elif и else]]
+	- [[3.Выбираем с помощью операторов#Операторы сравнения]]
+	- [[3.Выбираем с помощью операторов#Что есть истина]]
+	- [[3.Выбираем с помощью операторов#Что есть истина]]
+	- [[3.Выбираем с помощью операторов#Оператор морж]]
+	- [[3.Выбираем с помощью операторов#Выполняем несколько сравнений с помощью оператора in]]
+- [[4.Текстовые строки и операции с ними]]
+	- [[4.Текстовые строки и операции с ними#Текстовые строки]]
+		- [[4.Текстовые строки и операции с ними#Создаем строки с помощью кавычек]]
+		- [[4.Текстовые строки и операции с ними#О типах строк]]
+		- [[4.Текстовые строки и операции с ними#Создаем строки с помощью функции str]]
+		- [[4.Текстовые строки и операции с ними#Создаем escape-последовательности с помощью символа]]
+		- [[4.Текстовые строки и операции с ними#Объединяем строки с использованием символа]]
+		- [[4.Текстовые строки и операции с ними#Размножаем строки с помощью символа]]
+		- [[4.Текстовые строки и операции с ними#Извлекаем символ с помощью индексирования]]
+	
 		
