--- a/python_3/Основы/1.Типы и переменные.md
+++ b/python_3/Основы/1.Типы и переменные.md
@@ -15,8 +15,8 @@ __Имя__ |  __Тип__ | __Изменяется__ | __Примеры__
 Байты | bytes | Нет | b'ab\\xff'
 Массив байтов | bytearray | Да | bytearray(…)
 
-# Переменные
-#### Правила нейминга
+## Переменные
+### Правила нейминга
 Имена переменных в Python отвечают определенным правилам.
 - Они могут содержать только следующие символы:  
 	- буквы в нижнем регистре (от a до z); 
@@ -28,24 +28,24 @@ __Имя__ |  __Тип__ | __Изменяется__ | __Примеры__
 - Python особо обрабатывает имена, которые начинаются с нижнего подчеркивания (об этом вы сможете прочитать в ...). 
 - Они не могут совпадать с зарезервированными словами Python (их также называют ключевыми).
 
-####  Список зарезервированных слов: 
+###  Список зарезервированных слов: 
 *False await else import pass None break except in raise True class finally is return and continue for lambda try as def from nonlocal while assert del global not with async elif if or yield*
 
-#### Некорректными являются такие имена:
+### Некорректными являются такие имена:
 - `1` 
 - `1a`
 - `1_`
 - `name!`
 - `another-name`
 
-#### Переменные — это имена, а не локации
+### Переменные — это имена, а не локации
 Переменные — __всего лишь имена__, и в этом заключается отличие Python от других языков программирования. Об этом важно помнить, особенно при работе с такими изменяемыми объектами, как списки. Операция присваивания __не копирует значение__, а только лишь __прикрепляет имя к объекту__, содержащему нужные данные. Имя — __это ссылка на объект__, а не сам объект. Можно представить, что имя — это этикетка, приклеенная на коробку с объектом, которая размещается где-то в памяти компьютера.
 #### Присваивание нескольким именам 
 Вы можете присвоить значение сразу нескольким переменным одновременно: 
 ```python
 two = deux = zwei = 2
 ```
-#### Копирование
+### Копирование
 ```python
 x = 5
 y = x 
@@ -54,7 +54,7 @@ y = x
 x = 29
 print(x, y) # 29 5 
 ```
-Когда мы присваиваем переменную x переменной y, переменная y начинает __указывать на целочисленный объект со значением 5__, на который также указывает и переменная x. Далее мы изменяем переменную x так, чтобы она указывала на целочисленный объект со значением 29. Объект со значением 5, на который __все еще указывает переменная y, не изменился__.
+Когда мы присваиваем переменную *x* переменной *y*, переменная *y* начинает __указывать на целочисленный объект со значением 5__, на который также указывает и переменная *x*. Далее мы изменяем переменную *x* так, чтобы она указывала на целочисленный объект со значением 29. Объект со значением 5, на который __все еще указывает переменная __*y*__, не изменился__.
 
 ```python
 a = [2, 4, 6]
