--- a/python_3/Основы/2.Числа и операции.md
+++ b/python_3/Основы/2.Числа и операции.md
@@ -1,4 +1,5 @@
 # Операции с целыми числами
+## Таблица типов
 Оператор |  Описание | Пример | Результат
 ------------ | ------------  | ------------ | ------------
 \+ | Сложение  | 5 + 8 | 13
@@ -100,3 +101,29 @@ bin(value) #'0b1000001'
 oct(value) #'0o101' 
 hex(value) #'0x41'
 ```
+# Комментарии
+Комментарий помечается символом __#__: все, что после __#__ и до конца текущей строки. Обычно комментарий располагается на отдельной строке. Символ __#__ имеет много имен: *хеш, шарп, фунт или устрашающее октоторп*.
+```python
+# 60 с/мин * 60 мин/ч * 24 ч/день 
+seconds_per_day = 86400
+```
+Однако если октоторп(#) находится внутри текстовой строки, он становится простым символом #.
+# Продлеваем строки с помощью символа \\
+Рекомендуемая (но не обязательная) максимальная длина строки равна __80 символам__. Если вы не можете выразить свою мысль в рамках 80 символов, воспользуйтесь символом продолжения __\\__ — просто поместите его в конце строки, и дальше Python будет действовать так, как будто это все та же строка:
+```python
+sum = 	1 + \
+		2 + \ 
+		3 + \ 
+		4 
+>>> sum 
+10
+```
+Есть небольшая хитрость: если использовать парные круглые скобки, Python не будет жаловаться на некорректное окончание строк:
+```python 
+sum = (
+		1 +
+		2 +
+		3 + 
+		4)
+>>> sum 
+10
