--- a/python_3/Основы/3.Выбираем с помощью операторов.md
+++ b/python_3/Основы/3.Выбираем с помощью операторов.md
@@ -1,5 +1,6 @@
-# Сравниваем с помощью операторов if, elif и else
-#### If, elif и else
+# Сравниваем с помощью операторов 
+
+## If, elif и else
 Строки __if и else__ в Python выступают операторами, которые проверяют, является ли значение выражения (в данном случае переменной disaster) равным __True__.
 ```python
 disaster = True 
@@ -21,7 +22,8 @@ elif color == "green":
 else: 
 	print("I've never heard of the color", color)
 ```
-#### Операторы сравнения
+
+## Операторы сравнения
 В Python используются следующие операторы сравнения:
 - равенство (`==`)
 - неравенство (``!=``)
@@ -31,20 +33,22 @@ else:
 - больше или равно (``>=``)
 
 Если нужно выполнить несколько сравнений одновременно, можно использовать логические (или булевы) операторы __and, or и not__ для определения итогового логического результата.
-#### Что есть истина?
+
+## Что есть истина?
 К False приравниваются следующие значения:
-- булева переменная False
-- значение None
-- целое число 0
-- число с плавающей точкой 0.0
-- пустая строка (' ')
-- пустой список (\[ \])
-- пустой кортеж (( ))
-- пустой словарь ({ })
-- пустое множество (set( ))
+- булева переменная __False__
+- значение __None__
+- целое число __0__
+- число с плавающей точкой __0.0__
+- пустая строка __(' ')__
+- пустой список __(\[ \])__
+- пустой кортеж __(( ))__
+- пустой словарь __({ })__
+- пустое множество __(set( ))__
 
 __Все остальные значения приравниваются к True__.
-#### Оператор морж
+
+## Оператор морж
 В Python 3.8 появился оператор-морж, который выглядит следующим образом: 
 __имя := выражение__
 Как правило, для присваивания и проверки нужно выполнить два шага:
@@ -66,3 +70,34 @@ if diff := tweet_limit - len(tweet_string) >= 0:
 else: 
 	print("Went over by", abs(diff))
 ```
+
+## Выполняем несколько сравнений с помощью оператора in
+Каждый раз, когда вам нужно выполнить множество сравнений, разделенных ключевым словом or, используйте оператор членства __in__. В следующем примере мы проверяем, является ли буква гласной:
+```python 
+vowels = 'aeiou' 
+letter = 'o'
+letter in vowels # True 
+if letter in vowels: 
+	print(letter, 'is a vowel') # o is a vowel
+```
+Рассмотрим также небольшой пример того, как можно использовать оператор __in__ для других типов данных:
+```python
+letter = 'o'
+vowel_set = {'a', 'e', 'i', 'o', 'u'}
+letter in vowel_set
+# True
+vowel_list = ['a', 'e', 'i', 'o', 'u']
+letter in vowel_list
+# True
+vowel_tuple = ('a', 'e', 'i', 'o', 'u')
+letter in vowel_tuple 
+# True 
+vowel_dict = {'a': 'apple', 'e': 'elephant', 'i': 'impala', 
+'o': 'ocelot', 'u': 'unicorn'}
+letter in vowel_dict
+# True 
+vowel_string = "aeiou"
+letter in vowel_string
+# True
+```
+В случае со словарем оператор __in__ проверяет ключи (они находятся слева от двоеточия), а не значения.
