Update 1.Типы и переменные.md

--- a/python_3/Основы/1.Типы и переменные.md
+++ b/python_3/Основы/1.Типы и переменные.md
@@ -59,7 +59,7 @@ print(x, y) # 29 5
 ```python
 a = [2, 4, 6]
 b = a 
-print(a, b) # [2, 4, 6] [2, 4, 6
+print(a, b) # [2, 4, 6] [2, 4, 6]
 
 a[0] = 99
 print(a, b) # [99, 4, 6] [99, 4, 6]
